# rotev-engine

./: .gitignore  CMakeLists.txt
example/: CMakeLists.txt  example.cc
src/: CMakeLists.txt
src/data_structures/: CMakeLists.txt  line.cc  line.h  object.cc  object.h  pixel.cc  pixel.h  point.cc  point.h  triangle.cc  triangle.h
src/engine/: CMakeLists.txt  engine.cc  engine.h
src/geometry/: CMakeLists.txt  projector.cc  projector.h
src/rasterization/: CMakeLists.txt  rasterizer.cc  rasterizer.h  z_buffer.cc  z_buffer.h
src/renderer/: CMakeLists.txt  renderer.cc  renderer.h  renderer_exceptions.cc  renderer_exceptions.h  z_buffer.h
src/utils/: types.h
test/: CMakeLists.txt
test/data_structures/: CMakeLists.txt  test_line.cc  test_object.cc  test_triangle.cc
test/rasterization/: test_rasterizer.cc  test_z_buffer.cc
